[package]
name = "base32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false
